# datapath_test_task

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.yaml  justfile
cmake/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  ProjectOptions.cmake  Sanitizers.cmake
include/config/: TapeConfig.hpp  TapeConfigParser.hpp
include/sorting/: TapeSorter.hpp
include/tape/: FileTape.hpp  FileTapeFactory.hpp  ITape.hpp  ITapeFactory.hpp  TapeException.hpp  TapeIterators.hpp
src/: CMakeLists.txt  main.cpp
src/config/: TapeConfigParser.cpp
src/sorting/: TapeSorter.cpp
src/tape/: FileTape.cpp
tests/: CMakeLists.txt
tests/support/: MemoryTape.hpp  MemoryTapeFactory.hpp
tests/unit/: FileTapeTest.cpp  TapeConfigParserTest.cpp  TapeSorterTest.cpp
